2008-07-25  Chong Yidong  <cyd@stupidchicken.com>

	* image-mode.el (image-minor-mode): Set up winprops.

2008-07-24  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* diff-mode.el (diff-show-trailing-blanks): New fun.  Show trailing
	blanks in modified lines for diff-mode.

2008-07-24  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (ELCFILES): Add net/xesam.el.

	* net/tramp.el (tramp-handle-start-file-process): Make NAME a unique
	process name.  Reported by Markus Triska <markus.triska@gmx.at>.

	* net/xesam.el: New file.

2008-07-24  Sven Joachim  <svenjoac@gmx.de>

	* dired-aux.el (dired-copy-file-recursive): Avoid calling
	set-file-modes when creating target directories.

2008-07-24  Juanma Barranquero  <lekktu@gmail.com>

	* play/solitaire.el (solitaire-mode): Fix typo in docstring.
	Set `show-trailing-whitespace' to nil.
	(solitaire, solitaire-mode-map, solitaire-mode-hook, solitaire-solve):
	Fix typos in docstrings.

2008-07-24  Chong Yidong  <cyd@stupidchicken.com>

	* textmodes/enriched.el (enriched-mode-map): Bind C-a and C-j via
	key remapping, not directly.

2008-07-24  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* whitespace.el: New version 11.2.
	(whitespace-newline-mode, global-whitespace-newline-mode): New newline
	minor mode visualization.

2008-07-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/cc-mode.el (auto-mode-alist): Add .i and .ii files.

	* Makefile.in (ELCFILES): Add term/common-win.elc.

	* vc-dir.el (vc-dir-search, vc-dir-isearch)
	(vc-dir-isearch-regexp): New functions.
	(vc-dir-mode-map, vc-dir-menu-map): Bind them.

2008-07-23  Juri Linkov  <juri@jurta.org>

	* isearch-multi.el: Remove file to avoid dos file name clashes
	with isearch-x.el.  Move most content to misearch.el.

	* misearch.el: New file with most content from isearch-multi.el.
	Rename `isearch-buffers' name prefixes to `multi-isearch'.
	Remove `isearch-buffers-minor-mode'.  Add new function